correction alignement bouton

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,12 @@ input {
     margin-top: 30px;
 }
 
+.butt {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .button{
     color: var(--text-color-grey);
     font-size: var(--text-size-medium);
@@ -47,7 +53,6 @@ input {
     width: 150px;
     height: 20px;
     border-radius: 10px;
-    margin-left: 105px;
     cursor: pointer;
 }
 .button:hover {
